Website files/styles/results-style.css
body {
  margin: 0;
  padding: 0;
  background-color: #d6d6d6;
  margin: 0;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

nav {
  background-color: white;
  width: 100%;
  height: 100px;
  display: flex;
  align-items: center;
}

img[id="navlogo"] {
  width: 90px;
  height: 90px;
  margin-left: 50px;
  border-radius: 100%;
}

p[id="title"] {
  font-size: 30px;
  margin-left: 64px;
}

ul {
  list-style-type: none;
  display: flex;
  align-items: center;
}

ul li {
  border-right: 1px solid black;
  padding-right: 25px;
  padding-left: 25px;
  font-size: 20px;
}

ul li a {
  text-decoration: none;
  color: black;
}

ul li:first-child {
  padding-left: 0;
}

ul li:last-child {
  border-right: none;
  padding-right: 0;
}

.search-bar{
    width: 1200px;          
    height: 35px;          
    position: relative;
    left:125px;
    top:20px;
    padding: 0 10px;       
    border: 1px solid #ccc; 
    border-radius: 8px;    
    font-size: 16px;
}

.bar {
  margin: 0 8px;        
  font-weight: bold;    
  position: relative;   
  top: 0px;             
  left: 0px;            
}


#multi-select{
  width: 100px;
  position:relative;
  top:60px;
  right:70%;
  border-radius: 5px;
}

input{
  position:relative;
  top:60px;
  right:70%;
  border-radius: 5px;
}
  .post-section {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(2, auto);
    margin-top:100px;
    gap: 10px;
    justify-content: center;
    align-content: center;
}
.post-section div {
    width:50%;
    border: 1px solid #ccc;
    padding: 0px;
    background: #f9f9f9;
    margin:0 auto;
    min-height: 300px; 
}

.post-section img {
    width: 100%;
    height: 180px; 
    background-color: #ddd; 
    object-fit: cover; 
    border-radius: 6px;
    display: block;
    margin-top: 15px;

  
}

.box1 {
    position: relative; 
    left: 100px;
}

.box3{
  position: relative; 
  right: 100px;
}

.box6{
  position: relative; 
  right: 100px;
}

.box4 {
    position: relative; 
    left: 100px;
}


.description {
    display: block;
    position: relative;
    margin-top: 20px;
    left:10px;
}

.post-section span {
    display: inline-block;
    margin-left: 10px;
    margin-top: 10px;
}

footer{
  top:100px;
  background-color: #ffffff;
  position:relative;
  text-align: center;
  height: 50px;
}

footer p{
  padding-top:15px;
}

